Improved some scaling and white-space wrapping issues in the team backend

--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -67,6 +67,10 @@ textarea.form-control {
     border-width: 0 0 1px;
 }
 
+.include-newline {
+    white-space: pre-line;
+}
+
 .form-group .input-group .input-group-text {
     background-color: rgba(0,0,0,0.05);
     font-size: inherit;
